# rust-todo

./: .gitignore  README.md
backend/: Cargo.toml
backend/migrations/: 20251208061421_create_todos.up.sql
backend/src/: controller.rs  db.rs  interface.rs  main.rs  models.rs  repository.rs  service.rs
client/: package-lock.json  package.json  vite.config.js
client/src/: App.jsx  main.jsx
client/src/components/: ButtonAppBar.jsx  DashboardLayout.jsx  Header.jsx  Layout.jsx  ResponsiveDrawer.jsx  TemporaryDrawer.jsx  TodoForm.jsx  TodoItem.jsx  TodoList.jsx
client/src/components/theme/: theme.js
