[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full", "cors", "fs"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1", features = ["v7", "serde"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4.42", features = ["serde"] }
async-trait = "0.1.89"
